talos/k8s/demos/awscli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-cli
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: aws-cli
  template:
    metadata:
      name: aws-cli
      labels:
        app: aws-cli
        cloud.dancav.io/aws-iamra-session-name: s3-backup-creds
        cloud.dancav.io/aws-iamra-cert-secret: aws-cli-cert
    spec:
      containers:
        - name: aws-cli
          image: amazon/aws-cli
          command: [ "sleep", "infinity" ]
