talos/k8s/demos/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
        - name: nginx-demo
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  annotations:
    "coredns.io/hostname": lb.o.cavnet.cloud
spec:
  type: LoadBalancer
  selector:
    app: nginx-demo
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tls.o.cavnet.cloud
      secretName: tls.o.cavnet-cert
  rules:
    - host: tls.o.cavnet.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
